chapter_06/gatekeeper/allowed_image_registry_policy/test_pod.yaml
apiVersion: v1 
kind: Pod 
metadata: 
  name: test-pod 
spec: 
  containers: 
  - name: test-container 
    Image: unauthorized-repo/nginx:latest
