chapter_06/gatekeeper/allowed_image_registry_policy/namespace_label_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1 
kind: K8sAllowedRepos 
metadata: 
  name: allowed-repos 
spec: 
  parameters: 
    repo: "docker.io/your-organization" 
  match: 
    kinds: 
      - apiGroups: [""] 
        kinds: ["Pod"]
